2005-08-19  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure configure.in: Fixed check for usbcalls.h on OS/2
	  (patch from Paul Smedley <paul@smedley.info>).
	* backend/gt68xx.c backend/gt68xx_devices.c doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Enabled GT68XX_FLAG_NO_STOP for
	  Mustek BearPaw  2400 CU Plus. Some of these scanners don't seem
	  to like that command.
	* doc/descriptions/artec_eplus48u.desc: Disabled link to backend
	  homepage which doesn't seem to contain anything sane-related.

2005-08-19  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-USB.changes: Update.
	* backend/plustek-usb.h backend/plustek-usbdevs.c: Removed obsolete
	  _WAF_BLACKFINE. LiDE20 does not seem to have a reliable black
	  calibration area, so the devices now will switch off the lamp
	  for dark calibration.
	* backend/plustek-usbcal.c backend/plustek-usbscan.c: Cleanup.
	* backend/plustek-usbshading.c: Fixed line statistics and added
	  calibration data output.
	* backend/plustek.c: Bumped build number.

2005-08-18  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx_low.c backend/gt68xx_low.h
	  doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES doc/gt68xx/gt68xx.TODO:
	  Fixed the problem concerning scanning on *BSD. Scanning only
	  worked once (bug #300597). Fixed compilation warnings.

2005-08-17  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* README: Min. libusb version is 0.1.8.

2005-08-17  Julien Blache <jb@jblache.org>

	* tools/hotplug/libsane.usermap: Added USB IDs for the
	  sm3600-supported scanners. If you know the exact model name
	  corresponding to the above IDs, please mail sane-devel:
	  0x05da/0x40b3, 0x05da/0x40b8,
	  0x05da/0x40ca, 0x05da/0x40dd, 0x05da/0x40ff

2005-08-16  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-scsi.c: Make compileable ;-)
	* backend/snapscan-options.c: Removed //-style comment
