@@ -191,7 +191,11 @@ usb 0x0458 0x2017
 usb 0x0458 0x201a
 
 ##############################################################################
-# Autodetect Genius Colorpage 1200 EX
+# Autodetect Genius Colorpage 1200 X
+usb 0x0458 0x201d
+
+##############################################################################
+# Autodetect Genius Colorpage 1200 XE
 usb 0x0458 0x201f
 
 ##############################################################################
