@@ -867,7 +867,7 @@ static GT68xx_Model mustek_a3usb_model = {
   300,				/* base x-res used to calculate geometry */
   300,				/* base y-res used to calculate geometry */
   1200,				/* if ydpi is equal or higher, disable backtracking */
-  SANE_TRUE,			/* Use base_ydpi for all resolutions */
+  SANE_FALSE,			/* Use base_ydpi for all resolutions */
 
   {300, 150, 75, 50, 0},	/* possible x-resolutions */
   {600, 300, 150, 75, 50, 0},	/* possible y-resolutions */
@@ -1306,6 +1306,57 @@ static GT68xx_Model genius_vivid3xe_model = {
     /* mostly untested, based on the Genius Vivid3x */
 };
 
+static GT68xx_Model genius_vivid1200x_model = {
+  "genius-colorpage-vivid-1200-x",	/* Name */
+  "Genius",			/* Device vendor string */
+  "Colorpage Vivid 1200 X",	/* Device model name */
+  "ccd569.fw",			/* Name of the firmware file */
+  SANE_FALSE,			/* Dynamic allocation flag */
+
+  &mustek_gt6816_command_set,	/* Command set used by this scanner */
+
+  600,				/* maximum optical sensor resolution */
+  1200,				/* maximum motor resolution */
+  600,				/* base x-res used to calculate geometry */
+  600,				/* base y-res used to calculate geometry */
+  1200,				/* if ydpi is equal or higher, disable backtracking */
+  SANE_TRUE,			/* Use base_ydpi for all resolutions */
+
+  {600, 300, 200, 100, 50, 0},	/* possible x-resolutions */
+  {1200, 600, 300, 200, 100, 50, 0},	/* possible y-resolutions */
+  {12, 8, 0},			/* possible depths in gray mode */
+  {12, 8, 0},			/* possible depths in color mode */
+
+  SANE_FIX (4.5),		/* Start of scan area in mm  (x) */
+  SANE_FIX (8.5),		/* Start of scan area in mm (y) */
+  SANE_FIX (218.0),		/* Size of scan area in mm (x) */
+  SANE_FIX (299.0),		/* Size of scan area in mm (y) */
+
+  SANE_FIX (0.0),		/* Start of white strip in mm (y) */
+  SANE_FIX (1.0),		/* Start of black mark in mm (x) */
+
+  SANE_FIX (0.0),		/* Start of scan area in TA mode in mm (x) */
+  SANE_FIX (0.0),		/* Start of scan area in TA mode in mm (y) */
+  SANE_FIX (100.0),		/* Size of scan area in TA mode in mm (x) */
+  SANE_FIX (100.0),		/* Size of scan area in TA mode in mm (y) */
+
+  SANE_FIX (0.0),		/* Start of white strip in TA mode in mm (y) */
+
+  48, 24, 0,			/* RGB CCD Line-distance correction in pixel */
+  0,				/* CCD distcance for CCD with 6 lines) */
+
+  COLOR_ORDER_RGB,		/* Order of the CCD/CIS colors */
+  {0x18, 0x1c, 0x16, 0x12, 0x18, 0x1c},	/* Default offset/gain */
+  {0x157, 0x157, 0x157},	/* Default exposure parameters */
+  SANE_FIX (2.0),		/* Default gamma value */
+
+  SANE_FALSE,			/* Is this a CIS scanner? */
+  GT68XX_FLAG_OFFSET_INV | GT68XX_FLAG_ALWAYS_LINEMODE |
+  GT68XX_FLAG_UNTESTED		/* Which flags are needed for this scanner? */
+    /* Untested, but is reported to be the same as 1200 XE with additional buttons */
+};
+
+
 static GT68xx_Model genius_vivid1200xe_model = {
   "genius-colorpage-vivid-1200-xe",	/* Name */
   "Genius",			/* Device vendor string */
@@ -1531,6 +1582,7 @@ static GT68xx_USB_Device_Entry gt68xx_usb_device_list[] = {
   {0x0458, 0x2017, &genius_vivid3xe_model},
   {0x0458, 0x201a, &genius_vivid4xe_model},
   {0x0458, 0x201b, &genius_vivid4x_model},
+  {0x0458, 0x201d, &genius_vivid1200x_model},
   {0x0458, 0x201f, &genius_vivid1200xe_model},
   {0x04a7, 0x0444, &visioneer_onetouch_7300_model},
   {0, 0, NULL}
