@@ -83,6 +83,7 @@ Mustek ScanExpress A3 USB
 - still slight vert. stripes
 - why is line distance setup necessary?
 - exposure doesn't seem to have any effect
+- 600 dpi color produces random garbage after about 800 lines. Scanhead stops.
 
 Mustek ScanExpress 1248 UB
 ok
